# toy_slam

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
IO/: CMakeLists.txt  DataReader.cpp  DataReader.h  EurocDataReader.cpp  EurocDataReader.h  EurocReader.cpp  EurocReader.h  IoUtil.h  Sensor.h  SensorFactory.cpp  SensorFactory.h  SensorInfo.h  Simulator.cpp  Simulator.h
Test/: CMakeLists.txt  hello_test.cpp
app/: AxisRenderer.cpp  AxisRenderer.h  CMakeLists.txt  PointBasicPipeline.h  PointCloudRenderer.cpp  PointCloudRenderer.h  SlamApp.cpp  SlamApp.h  SlamObjectPipeline.h  basic.frag  basic.vert  basicPoint.vert  vo_main.cpp
common/: macros.h  types.h
configs/: VioOnly.json  euroc_sensor.json
exec/: vio_main.cpp  vo_main.cpp
libvulkanlight/: CMakeLists.txt
libvulkanlight/core/: App.cpp  App.h  Buffer.cpp  Buffer.h  BufferingBuffer.cpp  BufferingBuffer.h  ComputePipeline.cpp  ComputePipeline.h  DescriptorSetLayout.h  Device.cpp  Device.h  DynamicUniform.h  DynamicUniformBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  Instance.cpp  Object.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  Queue.cpp  Queue.h  RenderContext.cpp  RenderContext.h  ResourcePool.cpp  ResourcePool.h  ShaderModule.cpp  ShaderModule.h  SubApp.cpp  SubApp.h  SwapchainRenderContext.cpp  SwapchainRenderContext.h  Texture.h  UniformBuffer.h  VkObject.h  cores.h  types.h  (+1 more)
libvulkanlight/gui/: BaseRenderer.cpp  BaseRenderer.h  BasicRenderer.cpp  BasicRenderer.h  GUI.cpp  GUI.h  GUI2.cpp  GUI2.h  GraphicsCamera.cpp  GraphicsCamera.h  GuiObject.h  ImGuiObject.h  InputCallback.cpp  InputCallback.h  RendererBase.cpp  RendererBase.h  SampleRenderer.cpp  SampleRenderer.h  VkBaseRenderer.cpp  VkBaseRenderer.h  guis.h
libvulkanlight/shaders/: ShaderPool.cpp  ShaderPool.h  ShaderTypes.h  shaders.h  tri.frag
libvulkanlight/util/: SPIRVReflection.cpp  SPIRVReflection.h  Utils.cpp  Utils.h  VkError.cpp  VkError.h  VkSettings.cpp  VkSettings.h  VkShaderPool.h  VkShaderUtil.cpp  VkShaderUtil.h  VklError.cpp  VklError.h  VklLogger.cpp  VklLogger.h  VklSettings.cpp  VklSettings.h  VklShaderUtil.cpp  VklShaderUtil.h  common.cpp  common.h  vkltypes.h
libvulkanlight/window/: GlfwWindow.cpp  GlfwWindow.h  HeadlessWindow.cpp  HeadlessWindow.h  Window.cpp  Window.h
log/: toylog.txt
python/: SparseMatrix.ipynb
samples/: CMakeLists.txt  sample_custom_fmt.cpp  sample_cv_mat.cpp  sample_optflow.cpp  sample_sparse_matrix_draw.cpp  sample_tbb.cpp  sample_vulkan.cpp
src/: CMakeLists.txt  SLAMInfo.cpp  SLAMInfo.h  Slam.cpp
src/Camera/: Camera.cpp  PinholeRadTan.h
src/DataBase/: Factor.h  Frame.cpp  Frame.h  ImagePyramid.h  LocalMap.cpp  Map.h  MapPoint.cpp  MarginFactor.h  PoseState.h
src/FeatureTracker/: FeatureTracker.cpp  PointMatcher.h  PointTracker.cpp  PointTracker.h  patch.h  patterns.h
src/IO/: DataReader.h  EurocReader.cpp  EurocReader.h  Sensor.h  SensorFactory.cpp  SensorFactory.h  SensorInfo.h  Simulator.cpp  Simulator.h
src/Solver/: CostFunction.h  SqrtLocalSolver.cpp  SqrtMarginalizer.h  VioSolver.cpp  VioSolver.h
src/Vio/: FrameTracker.cpp  FrameTracker.h  VioCore.h
src/common/: macros.h
src/util/: EigenUtil.h  ImageUtil.h  IoUtil.h  LogUtil.h  Singleton.h  Thread.h  ToyAssert.h  ToyLogger.cpp  ToyLogger.h  config.h
toy/: CMakeLists.txt  Slam.cpp  Slam.h  types.h
toy/Camera/: Camera.cpp  Camera.h  PinholeRadTan.h
toy/DataBase/: Camera.h  Factor.h  Feature.h  Frame.cpp  Frame.h  FrameState.cpp  FrameState.h  ImagePyramid.cpp  ImagePyramid.h  LocalMap.cpp  LocalMap.h  Map.h  MapPoint.cpp  MapPoint.h  MarginFactor.h  MemoryPointerPool.cpp  MemoryPointerPool.h  Pointer.h
toy/FeatureTracker/: CVOpticalFlow.h  FeatureModule.h  FeatureTracker.cpp  FeatureTracker.h  LineExtractor.h  LineMatcher.h  LineTracker.h  PatchOpticalFlow.h  PointExtractor.cpp  PointExtractor.h  PointMatcher.cpp  PointMatcher.h  PointTracker.cpp  PointTracker.h  PointTrackingModule.h  patch.h  patterns.cpp  patterns.h
toy/ImageTracker/: ImageModule.h  ImageTracker.h
toy/Solver/: BasicSolver.h  CostFunction.h  LocalSolver.cpp  LocalSolver.h  LocalSolverFactory.h  MapPointLinearization.cpp  MapPointLinearization.h  Parameter.cpp  Parameter.h  SqrtLocalSolver.cpp  SqrtLocalSolver.h  SqrtMarginalizationCost.h  SqrtMarginalizationCost222.h  SqrtMarginalizer.cpp  SqrtMarginalizer.h  SqrtProblem.cpp  SqrtProblem.h  SqrtWindowSolver.h  VioSolver.cpp  VioSolver.h  VioSolverFactory.cpp  VioSolverFactory.h
toy/Vio/: FrameTracker.cpp  FrameTracker.h  LocalTracker.cpp  LocalTracker.h  Vio.cpp  Vio.h  VioCore.cpp  VioCore.h
toy/datastruct/: Feature.h  Frame.cpp  Frame.h
toy/util/: CustomTypes.h  DebugUtil.h  EigenUtil.h  ImageUtil.h  Logger.h  Processor.h  Singleton.h  Thread.h  ToyAssert.h  ToyHash.h  ToyLogger.cpp  ToyLogger.h  config.cpp  config.h  macros.h  usings.h
vulkanLight/: CMakeLists.txt
vulkanLight/core/: App.cpp  App.h  Application.cpp  Application.h  Buffer.cpp  Device.cpp  Device.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Queue.cpp  Queue.h  RenderContext.cpp  RenderContext.h  SwapchainRenderContext.cpp  types.h
vulkanLight/gui/: GUI.cpp  GUI.h  GraphicsCamera.h  InputCallback.cpp  ScreenCamera.cpp  ScreenCamera.h  VkBaseRenderer.cpp  VkBaseRenderer.h
vulkanLight/shaders/: ShaderTypes.h  tri.vert
vulkanLight/util/: Utils.h  VkError.cpp  VkLogger.h  VkShaderUtil.cpp  VkShaderUtil.h  VklError.h  VklLogger.h  macros.h  types.h
vulkanLight/window/: GlfwWindow.cpp  GlfwWindow.h  HeadlessWindow.cpp  HeadlessWindow.h  Window.cpp  Window.h
