cmake_minimum_required(VERSION 3.18.1)

project("io")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

file(GLOB_RECURSE IO_SRC
  ${CMAKE_CURRENT_SOURCE_DIR}/*.h
  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

add_library(io STATIC ${IO_SRC})
target_include_directories(io PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
