cmake_minimum_required(VERSION 3.18.1)

project(vulkanLight C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(Vulkan REQUIRED)

file(GLOB_RECURSE VKL_SRC
  ${CMAKE_CURRENT_SOURCE_DIR}/*.h
  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

add_library(${PROJECT_NAME} STATIC ${VKL_SRC})

file(GLOB SUBDIRECTORIES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} */)

target_link_libraries(${PROJECT_NAME} PUBLIC Vulkan::Vulkan libs graphicslib)
target_include_directories(${PROJECT_NAME}
  PUBLIC

  ${CMAKE_CURRENT_SOURCE_DIR}
  ${SUBDIRECTORIES}
  ${CMAKE_CURRENT_SOURCE_DIR}/../common
)

if(WIN32)
  target_compile_definitions(
    ${PROJECT_NAME}
    PUBLIC
    NOMINMAX
    VKL_DEBUG
    VKL_VALIDATION_LAYERS
    VK_NO_PROTOTYPES
    VK_USE_PLATFORM_WIN32_KHR
    VULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1
    VMA_STATIC_VULKAN_FUNCTIONS=0
    VMA_DYNAMIC_VULKAN_FUNCTIONS=0)
elseif(UNIX)
  target_compile_definitions(
    ${PROJECT_NAME}
    PUBLIC
    VKL_DEBUG
    VKL_VALIDATION_LAYERS
    VK_NO_PROTOTYPES
    VK_USE_PLATFORM_XCB_KHR # 또는 VK_USE_PLATFORM_XLIB_KHR
    VULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1
    VMA_STATIC_VULKAN_FUNCTIONS=0
    VMA_DYNAMIC_VULKAN_FUNCTIONS=0)
endif()

add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})