cmake_minimum_required(VERSION 3.18.1)

project("toy")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

file(GLOB_RECURSE TOY_SRC
  ${CMAKE_CURRENT_SOURCE_DIR}/*.h
  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

add_library(${PROJECT_NAME} STATIC ${TOY_SRC})

file(GLOB SUBDIRECTORIES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)

target_include_directories(${PROJECT_NAME} PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}

  # ${CMAKE_CURRENT_SOURCE_DIR}/datastruct
  # ${CMAKE_CURRENT_SOURCE_DIR}/ImageModule
  # ${CMAKE_CURRENT_SOURCE_DIR}/mapper
  # ${CMAKE_CURRENT_SOURCE_DIR}/util
  # ${CMAKE_CURRENT_SOURCE_DIR}/Vio
  ${CMAKE_CURRENT_SOURCE_DIR}/../common
  ${SUBDIRECTORIES}
)

target_link_libraries(${PROJECT_NAME} PUBLIC libs)

add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})